<resources>
    <string name="app_name">UltiMusic</string>
    <string name="tab_songs">Canciones</string>
    <string name="tab_albums">Álbumes</string>
    <string name="tab_artists">Artistas</string>
    <string name="tab_genres">Géneros</string>
    <string name="tab_tags">Etiquetas</string>
    <string name="tab_playlists">Listas</string>
    <string name="action_menu">Menú</string>
    <string name="action_search">Buscar</string>
    <string name="action_more">Más opciones</string>
    <string name="action_sort">Ordenar</string>
    <string name="search_hint">Buscar</string>
    <string name="search_back">Cerrar la búsqueda</string>
    <string name="search_clear">Borrar lo escrito</string>
    <string name="search_prompt">Escribe para buscar canciones, álbumes y artistas.</string>
    <string name="search_no_results">No se ha encontrado nada para «%1$s».</string>
    <string name="shuffle_title">Escoger al azar</string>
    <string name="song_subtitle_format">%1$s | %2$s</string>
    <string name="song_more">Más opciones de la canción</string>
    <string name="add_to_queue">Añadir a cola</string>
    <string name="add_to_playlist">Añadir a lista</string>
    <string name="go_to_album">Ir al álbum</string>
    <string name="go_to_artist">Ir al artista</string>
    <string name="delete_song">Eliminar</string>
    <string name="delete_song_confirm">¿Eliminar <b>^1</b> del dispositivo?</string>
    <string name="delete_album_confirm">¿Eliminar el álbum <b>^1</b> y todas sus canciones del dispositivo?</string>
    <string name="album_cover_desc">Portada del álbum</string>
    <string name="song_cover_desc">Portada de la canción</string>
    <string name="no_songs">Para utilizar UltiMusic necesitas archivos de audio. Untar Technologies recomienda obtenerlos de tiendas como iTunes Store, Amazon Music, etc.</string>
    <string name="song_file_missing">No se encuentra el archivo de %1$s</string>
    <string name="cannot_open_file">No se ha podido abrir el archivo</string>
    <string name="cannot_add_current_song_to_queue">No puedes añadir la canción actual a la cola</string>
    <string name="cannot_add_to_empty_queue">No hay cola de reproducción</string>
    <string name="playback_error_file_not_found">no se encuentra el archivo</string>
    <string name="playback_error_no_permission">sin permiso para leer el archivo</string>
    <string name="playback_error_decoding">fallo al decodificar el audio</string>
    <string name="playback_error_io">fallo al leer el archivo</string>
    <string name="playback_error_skip_known">No se ha podido reproducir %1$s (%2$s), se salta a la siguiente</string>
    <string name="playback_error_skip_unknown">No se ha podido reproducir %1$s, se salta a la siguiente</string>
    <string name="song_selected_desc">Canción seleccionada</string>
    <string name="song_selection_more">Más opciones de las canciones seleccionadas</string>
    <plurals name="song_selection_count">
        <item quantity="one">%d seleccionada</item>
        <item quantity="other">%d seleccionadas</item>
    </plurals>
    <plurals name="delete_songs_confirm">
        <item quantity="one">¿Eliminar %d canción del dispositivo?</item>
        <item quantity="other">¿Eliminar %d canciones del dispositivo?</item>
    </plurals>
    <string name="person_image_desc">Imagen del artista</string>
    <string name="shuffle_collection">Reproducir en orden aleatorio</string>
    <string name="no_albums">Todavía no hay ningún álbum</string>
    <string name="no_artists">Todavía no hay ningún artista</string>
    <string name="artist_others">Otros</string>
    <string name="no_genres">Todavía no hay ningún género</string>
    <string name="tags_no_custom_hint">Todavía no hay ninguna etiqueta personalizada. Las etiquetas sirven para agrupar canciones en base a algo que tengan en común</string>
    <string name="no_songs_here">Aquí no hay ninguna canción</string>
    <plurals name="song_count">
        <item quantity="one">%d canción</item>
        <item quantity="other">%d canciones</item>
    </plurals>
    <plurals name="album_count">
        <item quantity="one">%d álbum</item>
        <item quantity="other">%d álbumes</item>
    </plurals>
    <plurals name="toast_added_to_queue">
        <item quantity="one">Añadida %d canción a la cola</item>
        <item quantity="other">Añadidas %d canciones a la cola</item>
    </plurals>
    <plurals name="toast_added_to_playlist">
        <item quantity="one">Añadida %1$d canción a «%2$s»</item>
        <item quantity="other">Añadidas %1$d canciones a «%2$s»</item>
    </plurals>
    <string name="edit_metadata">Editar metadatos</string>
    <string name="edit_tags">Editar etiquetas</string>
    <string name="metadata_editor_title">Editor de metadatos</string>
    <string name="metadata_editor_title_multi">Editar %1$d canciones</string>
    <string name="editor_multiple_values">Varios valores</string>
    <string name="editor_close">Cerrar el editor</string>
    <string name="editor_save">Guardar</string>
    <string name="editor_pick_cover">Elegir portada</string>
    <string name="editor_saved">Cambios guardados</string>
    <string name="editor_title_required">El título no puede quedar vacío</string>
    <string name="editor_unsaved_changes_title">Cambios sin guardar</string>
    <string name="editor_unsaved_changes_message">Tienes ediciones sin guardar. ¿Seguro que quieres salir?</string>
    <string name="editor_leave">Salir</string>
    <string name="editor_saving_wait">Un momento…</string>
    <string name="editor_clear_lyrics">Borrar la letra</string>
    <string name="editor_clear_video_url">Quitar el videoclip</string>
    <string name="editor_add_another_album">+ Añadir otro álbum</string>
    <string name="editor_remove_album">Quitar este álbum</string>
    <string name="editor_autofill">Autorrelleno de metadatos</string>
    <string name="autofill_missing_query_song">Escribe al menos el título o el artista para poder buscar</string>
    <string name="autofill_missing_query_album">Escribe al menos el título del álbum o el artista para poder buscar</string>
    <string name="suggestions_title">Sugerencias de metadatos</string>
    <string name="suggestions_empty">No se han encontrado resultados</string>
    <string name="suggestions_error">No se ha podido buscar. Comprueba tu conexión e inténtalo de nuevo</string>
    <string name="suggestions_rate_limited">Se han hecho demasiadas búsquedas seguidas. Vuelve a intentarlo dentro de %1$d segundos</string>
    <string name="suggestions_genius_rate_limited">Genius ha limitado las peticiones (%1$d s): se han rellenado los datos de iTunes, pero sin productores ni datos del remix</string>
    <string name="suggestions_retry">Reintentar</string>
    <string name="preview_search_title">Descubrir música</string>
    <string name="preview_search_hint">Título o artista</string>
    <string name="preview_search_idle">Busca una canción que no tengas</string>
    <string name="preview_play_desc">Reproducir fragmento</string>
    <string name="preview_pause_desc">Pausar fragmento</string>
    <string name="preview_playback_error">No se ha podido reproducir el fragmento</string>
    <string name="preview_stores_desc">Dónde conseguir el archivo</string>
    <string name="store_links_title">Conseguir el archivo</string>
    <string name="store_links_empty">No se ha encontrado esta canción en ninguna tienda de descargas</string>
    <string name="store_link_free">Gratis</string>
    <string name="store_download_started">Descargando %1$s…</string>
    <string name="store_download_done">Descargado: %1$s</string>
    <string name="store_download_failed">No se ha podido descargar %1$s</string>
    <string name="overwrite_picker_title">Elige qué quieres sobrescribir</string>
    <string name="overwrite_check_all">Marcar todo</string>
    <string name="overwrite_uncheck_all">Desmarcar todo</string>
    <string name="overwrite_field_cover">Carátula</string>
    <string name="overwrite_missing_fields">No se han podido obtener los campos %1$s</string>
    <string name="genius_setup_title">Acción requerida</string>
    <string name="genius_setup_intro">El sistema de rellenado automático de metadatos utiliza la API de Genius. Por causas ajenas a UltiMusic, para utilizar esta función debes seguir un proceso corto:</string>
    <string name="genius_setup_step1">1 - Abre este enlace e inicia sesión:</string>
    <string name="genius_setup_step2">2 - Dale a New API Client e introduce lo siguiente:</string>
    <string name="genius_setup_field_name">App Name: UltiMusic</string>
    <string name="genius_setup_field_url">App Website URL: https://github.com/Ruben-Besteiro/UltiMusic</string>
    <string name="genius_setup_step3">3 - Hecho esto, abajo del todo dale a Generate Access Token y copia lo que te salga. Se comprobará automáticamente cuando le des a <b>Continuar</b>.</string>
    <string name="genius_setup_value_name">UltiMusic</string>
    <string name="genius_setup_url">https://github.com/Ruben-Besteiro/UltiMusic</string>
    <string name="genius_setup_login_url">https://genius.com/api-clients</string>
    <string name="genius_setup_copy">Copiar</string>
    <string name="genius_setup_copied">Copiado</string>
    <string name="genius_setup_exit">Salir</string>
    <string name="genius_setup_continue">Continuar</string>
    <string name="genius_setup_checking">Comprobando el token…</string>
    <string name="genius_setup_ok">Token guardado</string>
    <string name="genius_setup_invalid">Ese token no vale. Comprueba que has copiado el Client Access Token, no el Client ID ni el Client Secret</string>
    <string name="genius_setup_optional">Este proceso es opcional, pero si lo rechazas, no podrás sacarle el máximo partido a esta función.</string>
    <string name="youtube_setup_intro">Ordenar por popularidad utiliza la YouTube Data API. Por causas ajenas a UltiMusic, para utilizar esta función debes seguir un proceso corto:</string>
    <string name="youtube_setup_step1">1 - Abre este enlace y crea un proyecto (o elige uno que ya tengas):</string>
    <string name="youtube_setup_step2">2 - En Biblioteca de APIs, busca YouTube Data API v3 y habilítala para ese proyecto (si no lo estaba ya). El paso 3 solo te dejará elegirla si la habilitas primero.</string>
    <string name="youtube_setup_step3">3 - Vuelve al proyecto, dale a Crear credenciales y selecciona YouTube Data API v3 donde te lo pida.</string>
    <string name="youtube_setup_step4">4 - Copia la clave que te dio el paso 3. Se comprobará automáticamente cuando le des a <b>Continuar</b>.</string>
    <string name="youtube_setup_login_url">https://console.cloud.google.com/apis/credentials</string>
    <string name="youtube_setup_optional">Este proceso es opcional, pero si lo rechazas, no podrás ordenar canciones ni artistas por popularidad.</string>
    <string name="sort_field_name">Nombre</string>
    <string name="sort_field_song_count">Número de canciones</string>
    <string name="sort_field_duration">Duración</string>
    <string name="sort_field_year">Año</string>
    <string name="sort_field_popularity">Popularidad</string>
    <string name="sort_invert_order">Invertir orden</string>
    <string name="expand_player">Expandir reproductor</string>
    <string name="play_pause">Reproducir o pausar</string>
    <string name="nothing_playing">Toca donde quieras o dale aquí →</string>
    <string name="discography_action_desc">Ver discografía</string>
    <string name="discography_action_desc_album">Ver discografía del álbum</string>
    <string name="play_album_action_desc">Reproducir álbum</string>
    <string name="remove_from_queue">Quitar de la cola</string>
    <string name="folder_picker_root_title">UltiMusic</string>
    <string name="folder_picker_back">Subir una carpeta</string>
    <string name="folder_picker_choose">Elegir esta carpeta</string>
    <string name="folder_picker_empty">Esta carpeta no tiene subcarpetas</string>
</resources>